Funciona login gmail y facebook

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context="chani.wander.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="400dp"
-        android:layout_height="582dp"
-        tools:layout_editor_absoluteY="-6dp"
-        tools:layout_editor_absoluteX="5dp">
+    <Button
+        android:id="@+id/btnIniciarSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/boton_iniciar_sesion" />
 
+    <Button
+        android:id="@+id/btnCerrarSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cerrar_sesion"
+        android:visibility="gone" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/btnLoginFacebook"
+    <Button
+        android:id="@+id/boton_enlazar_cuentas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/enlazar_cuentas"
+        android:visibility="gone" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/datos"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="69dp"
-            android:textSize="10dp"
-            android:layout_width="160dip"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp" />
+            android:orientation="vertical"
+            android:visibility="gone">
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/btn_sign_google"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:layout_width="160dip"
-            android:layout_alignTop="@+id/btnLoginFacebook"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="24dp"
-            android:layout_alignBottom="@+id/btnLoginFacebook" />
+            <ImageView
+                android:id="@+id/imagen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/btnRegistration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="btnRegistration_Click"
-            android:text="Registration with Email"
-            android:textSize="16dp"
-            tools:layout_editor_absoluteX="144dp"
-            tools:layout_editor_absoluteY="33dp"
-            android:layout_alignBaseline="@+id/btnLogin"
-            android:layout_alignBottom="@+id/btnLogin"
-            android:layout_alignStart="@+id/btnLoginFacebook" />
+            <TextView
+                android:id="@+id/tvCorreo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="140dp"
-            android:onClick="btnLogin_Click"
-            android:text="Login"
-            android:textSize="16dp"
-            tools:layout_editor_absoluteX="161dp"
-            tools:layout_editor_absoluteY="92dp"
-            android:layout_below="@+id/btn_sign_google"
-            android:layout_toEndOf="@+id/btnRegistration" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tvNombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-
-</android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvProveedor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
